--- a/packages/block-editor/src/components/ListField/style.css
+++ b/packages/block-editor/src/components/ListField/style.css
@@ -1,50 +1,51 @@
 .ListField {
-	background: var(--color-white);
-	border: 2px solid var(--color-black);
-	border-radius: 7px;
-	box-shadow: var(--box-shadow-low);
-	display: grid;
-	gap: var(--1x);
-	grid-auto-flow: row;
-	grid-template-columns: 100%;
-	max-width: 640px;
-	padding: var(--1x);
-	position: relative;
+    background: var(--color-white);
+    border: 2px solid var(--color-black);
+    border-radius: 7px;
+    box-shadow: var(--box-shadow-low);
+    display: grid;
+    gap: var(--1x);
+    grid-auto-flow: row;
+    grid-template-columns: 100%;
+    max-width: 640px;
+    padding: var(--1x);
+    position: relative;
+    transition: var(--transition);
 }
 
 .ListField-list {
-	align-items: center;
-	display: flex;
-	font-size: var(--font-size-large);
-	font-weight: var(--font-weight-medium);
-	gap: var(--1x);
-	width: 100%;
+    align-items: center;
+    display: flex;
+    font-size: var(--font-size-large);
+    font-weight: var(--font-weight-medium);
+    gap: var(--1x);
+    width: 100%;
 
-	:is(.EditableString, .ListField-value, .ListField-placeholder) {
-		--focus-margin: 0;
-		--focus-padding: 0;
-		--placeholder-color: var(--color-light-gray);
-		--placeholder-focus-color: var(--color-light-gray);
-		--line-height: var(--3x);
-		border-radius: var(--3x);
-	}
+    :is(.EditableString, .ListField-value, .ListField-placeholder) {
+        --focus-margin: 0;
+        --focus-padding: 0;
+        --placeholder-color: var(--color-light-gray);
+        --placeholder-focus-color: var(--color-light-gray);
+        --line-height: var(--3x);
+        border-radius: var(--3x);
+    }
 
-	:is(.EditableString.has-value, .ListField-value) {
-		--focus-padding: var(--2x);
-		--padding: var(--2x);
-		background: var(--color-lighter-gray);
-		font-weight: var(--font-weight-semi-bold);
-	}
+    :is(.EditableString.has-value, .ListField-value) {
+        --focus-padding: var(--2x);
+        --padding: var(--2x);
+        background: var(--color-lighter-gray);
+        font-weight: var(--font-weight-semi-bold);
+    }
 
-	:is(.EditableString:not(.has-value), .ListField-placeholder) {
-		font-size: var(--font-size-base);
-	}
+    :is(.EditableString:not(.has-value), .ListField-placeholder) {
+        font-size: var(--font-size-base);
+    }
 }
 
 .ListField-placeholder {
-	color: var(--color-dark-gray);
+    color: var(--color-dark-gray);
 }
 
 .ListField-value {
-	padding: 0 var(--2x);
+    padding: 0 var(--2x);
 }
