Setup focus on components to work better

--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -36,7 +36,7 @@
     --color-accent-pink: #b10a50;
     --color-accent-red: #e6255d;
     --color-accent-orange: #ef3e23;
-    --color-accent-yellow: #ea971a;
+    --color-accent-yellow: #f0bc05;
 
     --color-error: #ed00631a;
 
