Fix loop keys and attribute tabbing

--- a/packages/block-editor/src/components/BlockIconField/style.css
+++ b/packages/block-editor/src/components/BlockIconField/style.css
@@ -94,7 +94,8 @@
     font-weight: var(--font-weight-semi-bold);
 }
 
-.BlockIconField-options {
+.BlockIconField-options,
+.BlockIconField-options > div {
     align-items: start;
     display: grid;
     gap: var(--1x);
