--- a/packages/block-editor/src/components/BlockVersionField/style.css
+++ b/packages/block-editor/src/components/BlockVersionField/style.css
@@ -5,6 +5,14 @@
 	font-weight: var(--font-weight-semi-bold);
 	gap: var(--1x);
 	grid-template-columns: repeat(2, max-content);
+
+	.EditableString {
+		--focus-color: transparent;
+		--focus-margin: 0;
+		--focus-padding: 0;
+		--highlight-padding: 0.3em;
+		--line-height: 1em;
+	}
 }
 
 .BlockVersionField-label {
