Fix connections dragging

--- a/packages/block-editor/src/components/BlueprintConnectionsDebug/style.css
+++ b/packages/block-editor/src/components/BlueprintConnectionsDebug/style.css
@@ -21,7 +21,7 @@
 		font-weight: var(--font-weight-semi-bold);
 	}
 
-	.BlueprintConnectionsDebug-list {
+	.BlueprintConnectionsDebug-list > div {
 		column-gap: var(--2x);
 		display: grid;
 		grid-template-columns: max-content 1fr;
