--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -37,6 +37,7 @@
 	--color-accent-red: #e6255d;
 	--color-accent-orange: #ef3e23;
 	--color-accent-yellow: #f0bc05;
+	--color-accent-yellow-30: #b48e13;
 
 	--color-error: #ed00631a;
 
