--- a/packages/block-editor/src/components/BlueprintAttribute/style.css
+++ b/packages/block-editor/src/components/BlueprintAttribute/style.css
@@ -4,7 +4,7 @@
 	font-family: var(--font-family-monospace);
 	font-size: var(--font-size-x-small);
 	font-weight: var(--font-weight-medium);
-	padding: var(--2x) 0;
+	padding: var(--2x) var(--1x);
 	position: relative;
 
 	& :is(.key, .value) {
@@ -22,6 +22,28 @@
 		--placeholder-color: var(--color-dark-gray);
 		--placeholder-focus-color: var(--color-dark-slate);
 	}
+}
+
+.BlueprintAttribute-focus {
+	border: 2px solid var(--color-accent-yellow-30);
+	border-radius: 5px;
+	bottom: var(--1x);
+	box-shadow: 0 0 var(--3x) var(--color-accent-yellow-30);
+	left: 0;
+	opacity: 0;
+	position: absolute;
+	right: 4px;
+	top: var(--1x);
+	transition: var(--transition);
+	z-index: -1;
+}
+
+.BlueprintAttribute.has-focus > .BlueprintAttribute-focus {
+	opacity: 1;
+}
+
+.BlueprintAttribute.has-focus .BlueprintConnectionHandle {
+	border-color: var(--color-accent-yellow-30);
 }
 
 .BlueprintAttribute-line {
