Fix indent styles

--- a/packages/block-editor/src/components/BlueprintComponent/style.css
+++ b/packages/block-editor/src/components/BlueprintComponent/style.css
@@ -3,10 +3,10 @@
 	display: grid;
 	gap: var(--1x);
 	justify-items: start;
-	margin-left: calc(16px * var(--indent, 0));
+	margin-left: var(--2x);
 	padding: 2px 0;
 	position: relative;
-	width: calc(100% - (16px * var(--indent, 0)));
+	width: calc(100% - var(--2x));
 
 	@if $debug-rect == true {
 		gap: var(--5x);
