WIP on attribute default object editing

--- a/packages/block-editor/src/components/EditableObject/style.css
+++ b/packages/block-editor/src/components/EditableObject/style.css
@@ -1,4 +1,4 @@
-.EditableObject {
+/*.EditableObject {
 	--color: var(--color-darkest-gray);
 	--focus-color: var(--color-light-gray);
 	--hover-color: var(--color-black);
@@ -54,3 +54,4 @@
 	grid-column: 1;
 	grid-row: 3;
 }
+*/
