--- a/packages/block-editor/src/components/PageBlueprint/style.css
+++ b/packages/block-editor/src/components/PageBlueprint/style.css
@@ -1,12 +1,9 @@
 .PageBlueprint {
-	box-sizing: border-box;
 	display: grid;
 	height: var(--app-height);
-	padding: var(--5x);
 }
 
 .PageBlueprint-view {
-	--sidebar-width: 340px;
 	align-items: stretch;
 	display: grid;
 	grid-template-columns: calc(100% - var(--sidebar-width)) var(
@@ -15,4 +12,11 @@
 	grid-template-rows: 100%;
 	overflow: hidden;
 	user-select: none;
+}
+
+.PageBlueprint-body {
+	box-sizing: border-box;
+	height: 100%;
+	overflow: hidden;
+	padding: var(--5x) 0 var(--5x) var(--5x);
 }
