--- a/packages/block-editor/src/components/BlueprintContextualComponentHelp/style.css
+++ b/packages/block-editor/src/components/BlueprintContextualComponentHelp/style.css
@@ -16,9 +16,14 @@
 	}
 
 	h4 {
+		align-items: center;
 		color: var(--color-black);
+		display: grid;
 		font-size: var(--font-size-base);
 		font-weight: var(--font-weight-bold);
+		gap: var(--1x);
+		grid-auto-flow: column;
+		grid-auto-columns: max-content;
 		margin: 0 0 var(--1x);
 	}
 
