--- a/packages/block-editor/src/components/EditableString/style.css
+++ b/packages/block-editor/src/components/EditableString/style.css
@@ -38,8 +38,8 @@
 		z-index: -1;
 	}
 
-	&.has-value:hover,
-	&.has-value.has-focus {
+	&:not(.is-disabled).has-value:hover,
+	&:not(.is-disabled).has-value.has-focus {
 		color: var(--hover-color);
 	}
 
