--- a/packages/block-editor/src/components/TextField/style.css
+++ b/packages/block-editor/src/components/TextField/style.css
@@ -3,6 +3,7 @@
 	border: 2px solid var(--color-black);
 	border-radius: 7px;
 	box-shadow: var(--box-shadow-low);
+	box-sizing: border-box;
 	display: grid;
 	gap: var(--1x);
 	grid-auto-flow: row;
@@ -31,6 +32,7 @@
 
 	.TextField-placeholder {
 		color: var(--color-gray);
+		min-height: calc(1.5 * var(--font-size-large));
 		user-select: none;
 	}
 
