Add further WIP on tutorial

--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -11,6 +11,9 @@
 	--10x: 80px;
 	--11x: 88px;
 	--12x: 96px;
+	--13x: 104px;
+	--14x: 112px;
+	--15x: 120px;
 
 	--color-white: #fff;
 	--color-black: #272432;
