--- a/packages/block-editor/src/components/CheckboxField/style.css
+++ b/packages/block-editor/src/components/CheckboxField/style.css
@@ -71,6 +71,10 @@
 	}
 }
 
+.CheckboxField.is-disabled .CheckboxField-checkbox input[type="checkbox"] {
+	cursor: default;
+}
+
 .CheckboxField.is-checked > .CheckboxField-checkbox::after {
 	opacity: 1;
 }
