--- a/packages/block-editor/src/components/BlueprintAttributeAdd/style.css
+++ b/packages/block-editor/src/components/BlueprintAttributeAdd/style.css
@@ -14,7 +14,7 @@
 	transition: var(--transition);
 	white-space: nowrap;
 
-	&:hover {
+	&:not(.is-disabled):hover {
 		background: var(--color-white);
 	}
 
