--- a/packages/block-editor/src/components/BlueprintEditor/style.css
+++ b/packages/block-editor/src/components/BlueprintEditor/style.css
@@ -15,12 +15,12 @@
 	height: 100%;
 	overflow: auto;
 	width: 100%;
+}
 
-	&::after {
-		content: "";
-		display: block;
-		height: var(--11x);
-	}
+.BlueprintEditor.has-upsell .BlueprintEditor-scroll::after {
+	content: "";
+	display: block;
+	height: var(--11x);
 }
 
 .BlueprintEditor-grid {
