--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -112,8 +112,9 @@
 	--box-shadow-low: 3px 3px 0 #27243233;
 	--box-shadow-x-low: 2px 2px 0 #27243233;
 
-	--transition: all 0.15s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-	--transition-slow: all 0.9s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	--transition: all 0.15s var(--transition-timing-function);
+	--transition-slow: all 0.9s var(--transition-timing-function);
+	--transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 
 	--app-height: max(
 		680px,
