--- a/packages/block-editor/src/components/PageBlockJson/style.css
+++ b/packages/block-editor/src/components/PageBlockJson/style.css
@@ -64,6 +64,6 @@
 }
 
 .App.is-tutorial .PageBlockJson-fields {
-	top: calc(-1 * var(--scroll-offset, 0));
+	top: var(--scroll-offset, 0);
 	transition: var(--transition);
 }
