--- a/packages/block-editor/src/components/TutorialTooltip/style.css
+++ b/packages/block-editor/src/components/TutorialTooltip/style.css
@@ -17,7 +17,9 @@
 	top: var(--top, 0);
 	transform: scale(0.8);
 	transform-origin: center;
-	transition: var(--transition);
+	transition:
+		opacity 0.15s var(--transition-timing-function),
+		transform 0.15s var(--transition-timing-function);
 	user-select: none;
 	width: var(--width);
 	z-index: 100;
