Refactor save validation

--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -42,7 +42,8 @@
 	--color-accent-yellow: #f0bc05;
 	--color-accent-yellow-30: #b48e13;
 
-	--color-error: #ed00631a;
+	--color-error: #fde5ef;
+	--color-error-10: #ed00631a;
 
 	--color-code-property: #b10a50;
 	--color-code-value: #ea971a;
