--- a/packages/block-editor/src/components/TextField/style.css
+++ b/packages/block-editor/src/components/TextField/style.css
@@ -13,7 +13,12 @@
 	position: relative;
 	transition: var(--transition);
 
+	&.is-invalid {
+		background: var(--color-error);
+	}
+
 	:is(.EditableString, .TextField-placeholder, .TextField-value) {
+		--focus-color: transparent;
 		--focus-margin: 0;
 		--focus-padding: 0;
 		--color: var(--color-black);
@@ -26,8 +31,8 @@
 
 	.EditableString {
 		display: grid;
-		overflow: auto;
 		width: 100%;
+		z-index: 2;
 	}
 
 	.TextField-placeholder {
