--- a/packages/block-editor/src/components/BlockVersionField/style.css
+++ b/packages/block-editor/src/components/BlockVersionField/style.css
@@ -10,7 +10,8 @@
 		--focus-color: transparent;
 		--focus-margin: 0;
 		--focus-padding: 0;
-		--highlight-padding: 0.3em;
+		--highlight-padding-y: 0.2em;
+		--highlight-padding-x: 0.3em;
 		--line-height: 1em;
 	}
 }
