--- a/packages/block-editor/src/components/EditableString/style.css
+++ b/packages/block-editor/src/components/EditableString/style.css
@@ -4,7 +4,8 @@
 	--focus-color: var(--color-light-gray);
 	--focus-margin: 0.2em;
 	--focus-padding: 0.4em;
-	--highlight-padding: 0.4em;
+	--highlight-padding-x: 0.4em;
+	--highlight-padding-y: 0.2em;
 	--hover-color: var(--color-black);
 	--line-height: 1.5em;
 	--margin: 0;
@@ -76,10 +77,10 @@
 	--background-color: var(--color-error-10);
 
 	&::before {
-		bottom: calc(-1 * var(--highlight-padding));
-		left: calc(-1 * var(--highlight-padding));
-		right: calc(-1 * var(--highlight-padding));
-		top: calc(-1 * var(--highlight-padding));
+		bottom: calc(-1 * var(--highlight-padding-y));
+		left: calc(-1 * var(--highlight-padding-x));
+		right: calc(-1 * var(--highlight-padding-x));
+		top: calc(-1 * var(--highlight-padding-y));
 	}
 }
 
