--- a/packages/block-editor/src/components/SaveDialog/style.css
+++ b/packages/block-editor/src/components/SaveDialog/style.css
@@ -160,7 +160,7 @@
 		position: relative;
 
 		&:before {
-			background: var(--color-lighter-gray);
+			background: var(--color-light-gray);
 			border-radius: 100%;
 			content: "";
 			display: block;
@@ -172,7 +172,7 @@
 	}
 
 	hr {
-		background: var(--color-lighter-gray);
+		background: var(--color-light-gray);
 		border: 0;
 		display: block;
 		height: 2px;
