Fix description rows

--- a/packages/block-editor/src/components/TextField/style.css
+++ b/packages/block-editor/src/components/TextField/style.css
@@ -37,7 +37,7 @@
 
 	.TextField-placeholder {
 		color: var(--color-gray);
-		min-height: calc(1.5 * var(--font-size-large));
+		min-height: calc(1.5 * var(--font-size-large) * var(--rows, 1));
 		user-select: none;
 	}
 
