--- a/packages/block-editor/src/components/PageBlockJson/style.css
+++ b/packages/block-editor/src/components/PageBlockJson/style.css
@@ -18,6 +18,7 @@
 	display: grid;
 	gap: var(--8x);
 	grid-auto-flow: row;
+	grid-template-columns: 100%;
 	position: relative;
 	z-index: 2;
 }
@@ -29,6 +30,7 @@
 	display: grid;
 	gap: var(--3x);
 	grid-auto-flow: row;
+	grid-template-columns: 100%;
 }
 
 .PageBlockJson-header {
