--- a/packages/block-editor/src/components/BlockNameField/style.css
+++ b/packages/block-editor/src/components/BlockNameField/style.css
@@ -14,6 +14,7 @@
 		--highlight-padding-y: 0.1em;
 		--highlight-padding-x: 0.3em;
 		--line-height: 1.5em;
+		width: fit-content;
 	}
 }
 
@@ -23,7 +24,7 @@
 	font-size: var(--font-size-x-large);
 	font-weight: var(--font-weight-medium);
 	gap: var(--2x);
-	grid-template-columns: repeat(3, max-content);
+	grid-template-columns: repeat(2, max-content) 1fr;
 	position: relative;
 }
 
