Fix miscellaneous bugs

--- a/packages/block-editor/src/components/App/style.css
+++ b/packages/block-editor/src/components/App/style.css
@@ -120,7 +120,8 @@
 	--app-height: max(
 		680px,
 		calc(
-			100vh - var(--navigator-height) - var(--wp-admin--admin-bar--height)
+			100vh - var(--navigator-height) -
+				var(--wp-admin--admin-bar--height, 0px)
 		)
 	);
 
