--- a/packages/block-editor/src/components/EditableString/style.css
+++ b/packages/block-editor/src/components/EditableString/style.css
@@ -56,6 +56,10 @@
 		color: var(--placeholder-color);
 		transition: var(--transition);
 	}
+
+	[contenteditable]:focus {
+		outline: none;
+	}
 }
 
 .EditableString.is-multiline > div {
