--- a/packages/block-editor/src/components/Navigator/style.css
+++ b/packages/block-editor/src/components/Navigator/style.css
@@ -6,7 +6,7 @@
 	height: var(--navigator-height);
 	padding-right: var(--5x);
 	position: sticky;
-	top: var(--wp-admin--admin-bar--height);
+	top: var(--wp-admin--admin-bar--height, 0px);
 	user-select: none;
 	z-index: 50;
 
