--- a/packages/block-editor/src/components/PageBlockJson/style.css
+++ b/packages/block-editor/src/components/PageBlockJson/style.css
@@ -54,15 +54,16 @@
 .App.is-tutorial .PageBlockJson {
 	box-sizing: border-box;
 	height: calc(
-		100vh - var(--navigator-height) - var(--wp-admin--admin-bar--height)
+		100vh - var(--navigator-height) -
+			var(--wp-admin--admin-bar--height, 0px)
 	);
 	overflow: hidden;
 }
 
 .App.is-tutorial .PageBlockJson-grid {
 	height: calc(
-		100vh - var(--navigator-height) - var(--wp-admin--admin-bar--height) -
-			var(--10x)
+		100vh - var(--navigator-height) -
+			var(--wp-admin--admin-bar--height, 0px) - var(--10x)
 	);
 	overflow: visible;
 }
