--- a/packages/block-editor/src/components/SaveDialog/style.css
+++ b/packages/block-editor/src/components/SaveDialog/style.css
@@ -54,7 +54,7 @@
 	justify-items: center;
 	padding: var(--8x);
 	position: sticky;
-	top: var(--wp-admin--admin-bar--height);
+	top: var(--wp-admin--admin-bar--height, 0px);
 	width: 100%;
 }
 
